Add wasm32 target on CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,6 +213,30 @@ jobs:
       - store_artifacts: *solc_artifact
       - persist_to_workspace: *all_artifacts
 
+  build_wasm32:
+    docker:
+      - image: clangbuiltlinux/ubuntu
+    environment:
+      TERM: xterm
+      CC: /usr/bin/clang-7
+      CXX: /usr/bin/clang++-7
+      CMAKE_OPTIONS: -DCMAKE_TOOLCHAIN_FILE=cmake/toolchains/wasm32.cmake -DCMAKE_BUILD_TYPE=Release
+    steps:
+      - checkout
+      - run:
+          name: Install build dependencies
+          command: |
+            apt-get -qq update
+            apt-get -qy install clang-7 cmake libboost-regex-dev libboost-filesystem-dev libboost-test-dev libboost-system-dev libboost-program-options-dev libz3-dev wget
+            ./scripts/install_obsolete_jsoncpp_1_7_4.sh
+      - run: *setup_prerelease_commit_hash
+      - run: *run_build
+      - store_artifacts: *solc_artifact
+      - persist_to_workspace:
+          root: build
+          paths:
+            - "*"
+
   test_check_spelling:
     docker:
       - image: circleci/python:3.6
@@ -421,3 +445,4 @@ workflows:
           <<: *build_on_tags
           requires:
             - build_x86_archlinux
+      - build_wasm32: *build_on_tags
