Add Docs examples style checker
Add tests and config files needed

Changes without formatting

Make solhint quiet

Add missing var

Make solhint quiet and remove ignore

Don’t check for default visibility

Check for solint installation

Add node dep

Switch image to node

Reset config file

Seperate style test and make new job

Correct typo

Fix formatting

Make executable

Fix paths in script

Update build step

Update test/cmdlineTests.sh

Co-Authored-By: ChrisChinchilla <chriswhward@gmail.com>

Initial commit for style tests

Add tests and config files needed

Changes without formatting

Make solhint quiet and remove ignore

Make npm global

Revert global

Try sudo

Fix script

Remove build dependence

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,6 +314,22 @@ jobs:
           path: test_results/
           destination: test_results/
 
+  test_docs_examples:
+    docker:
+      - image: circleci/node
+    environment:
+      TERM: xterm
+    steps:
+      - checkout
+      - attach_workspace:
+          at: build
+      - run:
+          name: JS deps
+          command: sudo npm install -g solhint
+      - run:
+          name: Test Docs examples
+          command: ./test/docsExamples.sh
+
   test_x86_clang7_asan:
     docker:
       - image: buildpack-deps:cosmic
@@ -496,6 +512,7 @@ workflows:
           requires:
             - build_x86_mac
       - docs: *build_on_tags
+      - test_docs_examples: *build_on_tags
       - build_x86_archlinux: *build_on_tags
       - test_x86_archlinux:
           <<: *build_on_tags
