--- a/libyul/CMakeLists.txt
+++ b/libyul/CMakeLists.txt
@@ -38,6 +38,8 @@ add_library(yul
 	backends/evm/EVMObjectCompiler.h
 	backends/evm/NoOutputAssembly.h
 	backends/evm/NoOutputAssembly.cpp
+	backends/wasm/EVMToEWasmTranslator.cpp
+	backends/wasm/EVMToEWasmTranslator.h
 	backends/wasm/EWasmCodeTransform.cpp
 	backends/wasm/EWasmCodeTransform.h
 	backends/wasm/EWasmObjectCompiler.cpp
